--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body{
 .toggle{
     background-color: #512da8;
     height: 100%;
-    background: linear-gradient(to right,#233754, #1D2F49);
+    background: linear-gradient(to right,#021b33, #072232);
     color: #fff;
     position: relative;
     left: -100%;
